# Restoai

.specify/integrations/: claude.manifest.json
.specify/memory/: constitution.md
img_classifier/: restoai_model_card.json
intent_classifier/: model_card.json
restoai-backend/: .dockerignore  .env.example  .gitignore  ARCH.md  CLAUDE.md  DECISIONS.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
restoai-backend/.github/workflows/: ci.yml
restoai-backend/.specify/: feature.json
restoai-backend/.specify/extensions/: .registry
restoai-backend/.specify/integrations/: speckit.manifest.json
restoai-backend/.specify/workflows/: workflow-registry.json
restoai-backend/alembic/: alembic.ini  env.py
restoai-backend/alembic/versions/: 001_initial_schema.py  002_reservations_schema.py
restoai-backend/app/: main.py
restoai-backend/app/api/: deps.py  health.py  middleware.py  telegram_router.py
restoai-backend/app/api/dispatcher/: auth.py  escalations.py  orders.py
restoai-backend/app/cli/: embed_menu.py
restoai-backend/app/db/: engine.py  models.py
restoai-backend/app/domain/: clients.py  conversation.py  customer.py  errors.py  language.py  menu.py  order.py  reservation.py  tools.py
restoai-backend/app/infra/: cost_log.py  draft_store.py  embed_client.py  groq_client.py  intent_classifier.py  logging.py  redaction.py  redis_client.py  reservation_draft_store.py  restaurant_info.py  settings.py  telegram_client.py
restoai-backend/app/prompts/ar_lb/: extract_reservation_fields.txt  render_readback.txt  render_reservation_confirmation.txt
restoai-backend/app/prompts/en/: extract_reservation_fields.txt  render_readback.txt  render_reservation_confirmation.txt
restoai-backend/app/repositories/: customer_repo.py  menu_repo.py  order_repo.py  reservation_repo.py  transcript_repo.py  zone_repo.py
restoai-backend/app/services/: conversation_service.py  customer_service.py  dispatcher_service.py  escalation_service.py  language_service.py  menu_service.py  order_draft_service.py  order_service.py  readiness.py  reservation_draft_service.py  reservation_prompts.py  reservation_service.py
restoai-backend/app/services/tools/: answer_menu_question.py  check_zone.py  detect_language.py  extract_address.py  extract_reservation_fields.py  match_dish.py  parse_order.py  render_readback.py  render_reservation_confirmation.py  summarize_for_dispatcher.py
restoai-backend/app/workers/: jobs.py
restoai-backend/data/: intent_classifier.joblib  menu_full_ar.json  restaurant_info.json
restoai-backend/docker/: api.Dockerfile  worker.Dockerfile
restoai-backend/intent_classifier/: model_card.json
restoai-backend/restoai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
restoai-backend/scripts/: retrain_intent_classifier.py
restoai-backend/specs/001-takeaway-orders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
restoai-backend/specs/001-takeaway-orders/checklists/: requirements.md
restoai-backend/specs/001-takeaway-orders/contracts/: dispatcher_api.openapi.yaml  internal_tools.md  telegram_webhook.md
restoai-backend/specs/002-reservations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
restoai-backend/specs/002-reservations/checklists/: requirements.md
restoai-backend/specs/002-reservations/contracts/: telegram-callbacks.md  tool-schemas.md
restoai-backend/tests/: conftest.py
restoai-backend/tests/api/: test_dispatcher_customizations.py  test_dispatcher_schemas.py
restoai-backend/tests/architecture/: test_async_purity.py  test_layering.py
restoai-backend/tests/domain/: test_address_models.py  test_customer_models.py  test_order_models.py  test_reservation.py
restoai-backend/tests/e2e/: test_us1_happy_path.py  test_us1_reservation_happy_path.py  test_us4_returning_customer.py  test_us5_escalation.py
restoai-backend/tests/golden/intent/: eval_slice.jsonl  test_classifier_threshold.py
restoai-backend/tests/golden/rag/: dataset.jsonl  test_retrieval_threshold.py
restoai-backend/tests/infra/: test_redaction.py  test_settings_boot.py
restoai-backend/tests/services/: test_extract_reservation_fields.py  test_graceful_degradation.py  test_no_callout_prompts.py  test_no_fabrication.py  test_pos_transition_invariant.py  test_qa_preserves_draft.py  test_readback_customizations.py  test_render_reservation_confirmation.py  test_reservation_draft_service.py  test_reservation_service.py  test_seating_rules.py  test_tool_tier_enforcement.py  test_transcript_writes.py  test_two_pass_resolution.py  test_unmapped_customization.py
